# graph-qt

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  FindGraphQt.cmake  LICENSE  README.md  build.bat  generate.bat  graph.cpp  graph.h  graph_axis.cpp  graph_axis.h  graph_cursor.h  graph_line.cpp  graph_line.h  graph_pane.cpp  graph_pane.h  graph_plot.cpp  graph_plot.h  graph_rendering_unittest.cpp  graph_time.h  graph_time_helper.h  graph_unittest.cpp  graph_widget.cpp  graph_widget.h  horizontal_scroll_bar_controller.cpp  horizontal_scroll_bar_controller.h  parameters.bat  vcpkg.json
.github/workflows/: ci.yml
app/: CMakeLists.txt  graph_app_main.cpp  test_data_source.h
model/: CMakeLists.txt  graph_data_source.cpp  graph_data_source.h  graph_range.h  graph_range_unittest.cpp  graph_types.h
test/: test_data_source.h  unittest_main.cpp
